--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -5,10 +5,14 @@
     background-color: #ffffff;
     padding: 10px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 .nav-logo {
-    height: 140px;
+    height: 100px;
     width: auto;
 }
 
@@ -33,7 +37,7 @@
 }
 
 .nav-login {
-    height: 2.5em;
+    height: 2em;
     cursor: pointer;
 }
 
