--- a/frontend/src/styles/authentification/RegisterPage.css
+++ b/frontend/src/styles/authentification/RegisterPage.css
@@ -1,4 +1,12 @@
-.login-form-container {
+.register-page-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(109, 128, 125, 0.5);
+    justify-content: center;
+}
+
+.register-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,24 +14,17 @@
     height: 100%;
 }
 
-.login-title {
+.register-title {
     font-family: 'WDXL Lubrifont TC', Arial, sans-serif;
     font-weight: 500;
     font-size: 72px;
 }
 
-.login-subtitle {
+.register-subtitle {
     display: inline-flex;
     align-items: center;
     gap: 8px;
     color: black;
     font-size: 18px;
     text-align: center;
-}
-
-.login-form {
-    background-color: white;
-    padding: 16px;
-    border-radius: 8px;
-    width: 100%;
 }
