--- a/frontend/src/styles/DroneComponent.css
+++ b/frontend/src/styles/DroneComponent.css
@@ -9,7 +9,7 @@
     text-align: center;
     background-color: white;
     border-radius: 25px;
-    margin: 1em;
+    margin: 0.8em;
     padding: 1.5em;
     display: flex;
     overflow: hidden;
@@ -74,10 +74,10 @@
 .component-attribute {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2em;
-    padding-top: 0.6em;
-    padding-bottom: 0.6em;
-    padding-left: 0.5em;
+    padding: 0.6em;
     transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: space-between;
 }
 
 .component-attribute:hover {
@@ -85,6 +85,6 @@
 }
 
 .tab-label {
-    font-size: 1.2em;
+    font-size: 1.4em;
     font-weight: 700;
 }
