Implemented Pagination for Drone Components, fixed buggy Sidebar

--- a/frontend/src/styles/DroneComponents.css
+++ b/frontend/src/styles/DroneComponents.css
@@ -1,6 +1,7 @@
 .components-page-container {
     display: flex;
     width: 100%;
+    min-height: 100vh;
     background-color: rgba(109, 128, 125, 0.5);
     overflow: auto;
 }
