--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,11 @@
 #root {
-    height: 100%;
+    height: fit-content;
 }
 
 html {
-    height: 100%;
+    height: fit-content;
 }
 
 body {
-    height: 100%;
+    height: fit-content;
 }
