--- a/frontend/src/styles/DroneComponents.css
+++ b/frontend/src/styles/DroneComponents.css
@@ -1,12 +1,19 @@
 .components-page-container {
     display: flex;
-    width: 100%;
+    margin: 0;
+    padding: 1em;
     min-height: 100vh;
     background-color: rgba(109, 128, 125, 0.5);
     overflow: auto;
+    width: 100%;
 }
 
 .components-main-container {
     flex: content;
-    padding: 20px;
+}
+
+.components-filter-container {
+    display: flex;
+    align-items: center;
+    padding: 1em 3em;
 }
