--- a/frontend/src/styles/ComponentsElement.css
+++ b/frontend/src/styles/ComponentsElement.css
@@ -1,9 +1,10 @@
 .component-element-container {
     text-align: center;
     width: 300px;
-    height: 380px;
+    height: 400px;
+    padding: 1em;
     display: grid;
-    grid-template-rows: 70% auto auto;
+    grid-template-rows: 70% auto 7%;
     border-radius: 5%;
     background-color: white;
     overflow: hidden;
@@ -29,12 +30,11 @@
 }
 
 .component-text-container {
-    text-align: center;
+    text-align: left;
     display: grid;
 }
 
 .component-element-model {
-    padding: 10px 10px 5px 10px;
     font-size: 1em; 
     font-family: 'Roboto', sans-serif;
     font-weight: 700; 
@@ -43,9 +43,20 @@
 }
 
 .component-element-desc {
-    padding: 0 10px 10px 10px;
-    font-size: 0.9em;
+    font-size: 0.8em;
     font-family: 'Open Sans', sans-serif;
     color: #6b7280;
-    text-align: center;
+}
+
+.component-element-price {
+    font-size: 1em;
+    font-family: 'Open Sans', sans-serif;
+    color: #333;
+    font-weight: 700;
+    display: flex;
+}
+
+.component-main-text {
+    display: flex;
+    flex-direction: column;
 }
