--- a/frontend/src/styles/WelcomePage.css
+++ b/frontend/src/styles/WelcomePage.css
@@ -1,23 +1,25 @@
 .slogan-main-container {
     position: absolute;
-    top: 42%;
-    left: 72%;
+    top: 55%;
+    left: 77%;
     transform: translateX(-50%);
     text-align: left;
     z-index: 10;
     padding: 0.5em;
+    width: 43%;
 }
 
 .slogan-main {
     font-family: 'Roboto', sans-serif; 
     font-size: 200%;
     font-weight: bold;
-    color: #333;
+    color: #2b2b2b;
     background-color: transparent;
     line-height: 1.1em;
+    margin-top: 0%;
 }
 
 .slogan-additional {
     font-family: 'Roboto', sans-serif; 
-    color: #525252;
+    color: #3e3e3e;
 }
