--- a/frontend/src/styles/DroneComponent.css
+++ b/frontend/src/styles/DroneComponent.css
@@ -3,7 +3,7 @@
     background-color: rgba(109, 128, 125, 0.5);
     display: flex;
     padding: 1em;
-    min-height: 100vh;
+    min-height: calc(100vh - 120px);
 }
 
 .component-data-contaner {
