--- a/frontend/src/styles/Workshop.css
+++ b/frontend/src/styles/Workshop.css
@@ -11,6 +11,8 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 1em;
+    position: sticky;
+    top: 120px;
 }
 
 .workshop-main-wrapper {
