--- a/frontend/src/styles/SchemaComments.css
+++ b/frontend/src/styles/SchemaComments.css
@@ -3,8 +3,7 @@
     background-color: white;
     border-radius: 1em;
     margin-top: 1em;
-    padding: 1.5em;
-    padding-top: 1em;
+    padding: 1em 1.5em 1.5em;
     display: flex;
     flex-direction: column;
 }
@@ -44,8 +43,7 @@
 .comment-creator-username {
     font-family: 'Roboto', sans-serif;
     font-size: 0.8em;
-    padding: 0;
-    padding-top: 0.5em;
+    padding: 0.5em 0 0;
 }
 
 .comment-date-container {
