--- a/frontend/src/styles/WelcomePage.css
+++ b/frontend/src/styles/WelcomePage.css
@@ -1,7 +1,7 @@
 .slogan-main-container {
     position: absolute;
-    top: 55%;
-    left: 77%;
+    top: 60%;
+    left: 73%;
     transform: translateX(-50%);
     text-align: left;
     z-index: 10;
@@ -16,7 +16,7 @@
     color: #2b2b2b;
     background-color: transparent;
     line-height: 1.1em;
-    margin-top: 0%;
+    margin-top: 0;
 }
 
 .slogan-additional {
