--- a/frontend/src/styles/authentification/LogInPage.css
+++ b/frontend/src/styles/authentification/LogInPage.css
@@ -1,7 +1,7 @@
 .login-page-container {
     display: flex;
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 120px);
     background-color: rgba(109, 128, 125, 0.5);
     justify-content: center;
 }
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    min-height: calc(100vh - 120px);
 }
 
 .login-title {
