--- a/frontend/src/styles/authentification/RegisterPage.css
+++ b/frontend/src/styles/authentification/RegisterPage.css
@@ -1,7 +1,7 @@
 .register-page-container {
     display: flex;
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 120px);
     background-color: rgba(109, 128, 125, 0.5);
     justify-content: center;
 }
