Added Showcase of the Drone min price/mass and size on the Publication Page. Implemented Handling of the onClick on the 3DModel Page

--- a/frontend/src/styles/Workshop.css
+++ b/frontend/src/styles/Workshop.css
@@ -4,7 +4,7 @@
 }
 
 .workshop-sidebar-container {
-    width: 340px;
+    max-width: 340px;
     height: calc(100vh - 120px);
     background-color: white;
     display: flex;
