--- a/frontend/src/styles/ComponentsElement.css
+++ b/frontend/src/styles/ComponentsElement.css
@@ -3,7 +3,7 @@
     width: 300px;
     padding: 1em;
     display: grid;
-    grid-template-rows: 70% auto 7%;
+    grid-template-rows: 60% 20% auto;
     border-radius: 5%;
     background-color: white;
     overflow: hidden;
@@ -16,11 +16,22 @@
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
 }
 
+.component-photo-container {
+    aspect-ratio: 1 / 1; 
+    overflow: hidden;
+    border-radius: 12px 12px 0 0;
+}
+
+.component-selection-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 .component-element-photo {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 12px 12px 0 0;
     transition: transform 0.3s ease;
 }
 
@@ -31,6 +42,7 @@
 .component-text-container {
     text-align: left;
     display: grid;
+    padding: 0.5em 0;
 }
 
 .component-element-model {
@@ -60,6 +72,7 @@
     color: #333;
     font-weight: 700;
     display: flex;
+    margin-bottom: 0.5em;
 }
 
 .component-main-text {
