--- a/frontend/src/styles/DroneComponents.css
+++ b/frontend/src/styles/DroneComponents.css
@@ -18,6 +18,10 @@
 .components-filter-container {
     display: flex;
     align-items: center;
+    background-color: white;
+}
+
+.components-function-container {
     padding: 1em;
     background-color: white;
 }
